Added doc string for has-cookie

--- a/src/main/resources/com/carvesystems/burpscript/ui/strings.properties
+++ b/src/main/resources/com/carvesystems/burpscript/ui/strings.properties
@@ -37,3 +37,4 @@ tool-source-eq-doc=Checks if the tool source is one of the provided sources
 from-proxy-doc=Checks if the request/response is from the proxy tool
 in-scope-doc=Checks if the request/response is in scope
 header-matches-doc=Checks if the header matches the given pattern
+has-cookie-doc=Checks if the request/response contains any of the provided cookies
